# ndi-dementia-screening

./: AI_INTEGRATION_GUIDE.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_README.md  QUICKSTART_OVERVIEW.md  QUICK_START.ps1  QUICK_START.sh  README.md  RUN_APP.ps1  SETUP_CHECKLIST.md  list_models.py  metadata.json  package-lock.json  test_env.py
backend/: .env  package-lock.json  package.json  server.js  test-ai-integration.js
backend/middleware/: auth.js
backend/models/: Report.js  User.js
backend/routes/: auth.js  profile.js  reports.js  screening.js
backend/utils/: ai-integration.js
ndi_project/: .gitignore  API_ENHANCEMENT_SUMMARY.md  AUDIT_REPORT.md  README.md  api_server.py  pyproject.toml  requirements.txt  test.m4a  test_api_client.py  test_whisper.py
ndi_project/app/: streamlit_app.py
ndi_project/audio/: README.md
ndi_project/data/: README.md
ndi_project/models/: README.md
ndi_project/outputs/: README.md
ndi_project/src/: __init__.py  config.py  feature_extraction.py  narrative_analysis.py  ndi_engine.py  predict.py  speech_biomarkers.py  speech_to_text.py  story_grammar.py  train_classifier.py
ndi_project/tests/: test_health_classification.py  test_model_bundle.py  test_narrative_metrics.py  test_ndi_engine.py  test_training_and_schema.py
ndi_project/transcripts/: README.md
src/: App.tsx  index.css  types.ts
src/components/: Navbar.tsx  ProtectedRoute.tsx
src/contexts/: AvatarContext.tsx
src/data/: tasks.ts
src/pages/: Dashboard.tsx  History.tsx  Home.tsx  Login.tsx  Processing.tsx  Profile.tsx  Report.tsx  (+4 more)
(+1 files in other folders)
